--- a/data-viz-platform/src/index.css
+++ b/data-viz-platform/src/index.css
@@ -1,3 +1,35 @@
+
+@font-face {
+  font-family: "RoobertTrial";
+  src: url("/fonts/RoobertTrial-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "RoobertTrial";
+  src: url("/fonts/RoobertTrial-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "RoobertTrial";
+  src: url("/fonts/RoobertTrial-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("/fonts/Inter-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("/fonts/Inter-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
